# virtual-lanes

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
docs/: index.md  product-direction.md  web.md
product-direction/: index.html
prototype/: NOTES.md  bowl-off.html  layouts.html
reference/: mkdocs.yml  pyproject.toml  setup.sh  setup_uv.sh
reference/docs/: api.md  cli.md  contribute.md  interfaces.md  tui.md
reference/src/virtual_lanes/: __init__.py  __main__.py  alley.py  bowler.py  bowling_database.py  game.py  league.py  scoring.py
reference/src/virtual_lanes/cli/: commands.py
reference/src/virtual_lanes/web/: app.py
reference/tests/: test_bowler.py  test_bowling_database.py  test_league.py  test_scoring.py
search/: search_index.json
src/: app.css  app.html
src/lib/: StatsView.svelte  centres.svelte.ts  history.svelte.ts  roster.svelte.ts  stats.ts
src/lib/bowloff/: BallPicker.svelte  Done.svelte  Leaderboard.svelte  Play.svelte  PostIt.svelte  Setup.svelte  state.svelte.ts
src/lib/engine/: bowling.ts  personas.ts  types.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/bowloff/: +page.svelte
src/routes/centres/: +page.svelte
src/routes/help/: +page.svelte
src/routes/history/: +page.svelte
src/routes/journal/: +page.svelte
src/routes/lane-read/: +page.svelte
src/routes/rivals/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/trace/: +page.svelte
src/virtual_lanes/: tournament.py
src/virtual_lanes/tui/: app.py
tests/: test_alley.py  test_game.py  test_tournament.py
