[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-lanes"
version = "0.2.2"
description = "A ten-pin bowling simulation library for modeling games"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Michael Borck", email = "michael@borck.me"}
]
dependencies = [
    "numpy>=1.26.4",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "textual>=0.52.1", 
    "python-fasthtml>=0.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "mkdocs>=1.5",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[project.scripts]
virtual-lanes = "virtual_lanes.cli.commands:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Migrated from .flake8
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ERA"]
ignore = ["E501"]  # Line too long

[tool.ruff.lint.isort]
known-first-party = ["virtual_lanes"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# FastHTML's API is designed around `from fasthtml.common import *` and
# repeated `def get()` route handlers; these checks fight that idiom.
"src/virtual_lanes/web/app.py" = ["F403", "F405", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
files = ["src/virtual_lanes"]
# The cli/tui/web packages are thin mock UIs over third-party frameworks
# (typer/textual/fasthtml) and are excluded from strict type checking.
exclude = "src/virtual_lanes/(cli|tui|web)/"
follow_imports = "silent"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["numpy.*"]
ignore_missing_imports = true